Add configuration options for --add-modules and --verbose